# UDL

./: .deepsource.toml  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRATION_PLAN.md  MIGRATION_SUCCESS.md  MONOREPO_ARCHITECTURE.md  README.md  cleanup-repos.sh  markdownlint-cli2.jsonc  markdownlintrun  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-main.yml  ci-python.yml  ci-rust.yml  ci-typescript.yml  release.yml
1az/: 1AZHELP.md  CHANGELOG.md  README.md  extension.js  language-configuration.json  package-lock.json
1az/ZZZNEW/: 1azGrammar.plist
1az/test-workspace/: example.1az
4Di/: document-expansions.md
JEFRY/: JEFRY.md
axe-Syntax/: directory_tree.txt
axe-Syntax/axe-b-testing-file/: pyproject.toml  requirements.txt
axe-Syntax/axe-b-testing-file/.github/workflows/: ci.yml
axe-Syntax/axe-b-testing-file/axe_builder/: cli.py
axe-Syntax/axe-b-testing-file/axe_builder/config/: settings.py
axe-Syntax/axe-b-testing-file/axe_builder/exporter/templates/: cli_template.py
axe-Syntax/axe-b-testing-file/axe_builder/models/: models.py
axe-Syntax/axe-b-testing-file/axe_builder/parser/: axe_syntax.lark  parser.py  transformer.py
axe-Syntax/axe-b-testing-file/axe_builder/tui/: widgets.py
axe-Syntax/axe-b-testing-file/axe_builder/utils/: utils.py
axe-Syntax/axe-b-testing-file/docs/: tutorials.rst
axe-Syntax/axe-b-testing-file/examples/: example_b.axe
axe-Syntax/axe-b-testing-file/tests/cli/: test_cli.py
axe-Syntax/axe-b-testing-file/tests/logger/: test_logger.py
axe-Syntax/axe-b-testing-file/tests/models/: test_models.py
axe-Syntax/axe-b-testing-file/tests/parser/: test_parser.py
axe-Syntax/docs/: api.rst  usage.rst
docs/: MIGRATION_PLAN.md  MIGRATION_SUCCESS.md  MONOREPO-STATUS.md  MONOREPO_ARCHITECTURE.md  README.md
gateppattern-1.1/: README.md
gateppattern-1.1/media/: decorations.js
mecha_lang/req/: revisions.md
projects/languages/axe-Syntax/: directory_map.py  pyproject.toml  requirements.txt
projects/languages/axe-Syntax/axe-b-testing-file/: README.md  build_axe.py  setup.py
projects/languages/axe-Syntax/axe-b-testing-file/_static/axe_builder/: tui.css
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/: cli.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/config/: settings.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/exporter/: exporter.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/exporter/templates/: cli_macro.jinja2  cli_template.jinja2  cli_template.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/logger/: logger.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/models/: models.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/parser/: parser.py  transformer.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/tui/: tui.py  widgets.py
projects/languages/axe-Syntax/axe-b-testing-file/axe_builder/utils/: utils.py
projects/languages/axe-Syntax/axe-b-testing-file/docs/: axe:Syntax.md  conf.py  index.rst  usage.rst
projects/languages/axe-Syntax/axe-b-testing-file/examples/: example_a.axe
projects/languages/axe-Syntax/axe-b-testing-file/tests/cli/: test_cli.py
projects/languages/axe-Syntax/axe-b-testing-file/tests/exporter/: test_exporter.py
projects/languages/axe-Syntax/axe-b-testing-file/tests/logger/: test_logger.py
projects/languages/axe-Syntax/axe-b-testing-file/tests/models/: test_models.py
projects/languages/axe-Syntax/axe-b-testing-file/tests/parser/: test_parser.py
projects/languages/axe-Syntax/docs/: conf.py  tutorials.rst
projects/languages/axe-Syntax/examples/: README.md
projects/languages/axe-Syntax/tests/cli/: test_cli.py
projects/languages/axe-Syntax/tests/exporter/: test_exporter.py
projects/languages/axe-Syntax/tests/logger/: test_logger.py
projects/languages/axe-Syntax/tests/models/: test_models.py
projects/languages/axe-Syntax/tests/parser/: test_parser.py
projects/languages/axe-Syntax/tests/tui/: test_tui.py
shared/: README.md
tooling/: README.md
(+100 files in other folders)
