[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axe_syntax"
version = "0.1.0"
description = "A CLI Menu Builder using axe:Syntax"
authors = [
    { name = "Dead Coast", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["cli", "typer", "lark", "textual", "loguru"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer==0.15.1",
    "lark-parser",
    "lark",
    "textual==1.0.0",
    "loguru==0.7.3",
    "pydantic==2.10.5",
    "pytest==8.3.4",
    "hypothesis==6.124.1",
    "jinja2==3.1.5",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints==3.0.1"
]

[project.scripts]
axe-builder = "axe_syntax.axe_builder.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["axe_syntax", "axe_syntax.*"]
